# haystack-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
haystack_sdk/: __init__.py  filter.py  formats.py  refs.py  types.py
haystack_sdk/brick/: __init__.py
haystack_sdk/brick/data/: brick_mappings.json
haystack_sdk/parsers/: __init__.py  _common.py  json_format.py  trio.py  zinc.py
haystack_sdk/renderers/: __init__.py  json_format.py  jsonld.py  trio.py  turtle.py  zinc.py
haystack_sdk/vocabulary/: __init__.py  _base.py  core.py  district_cooling.py  fdd.py  healthcare.py  netix_custom.py  residential.py  retail_mall.py  water_treatment.py
haystack_sdk/vocabulary/data/: core_tags.json  district_cooling_tags.json  fdd_tags.json  healthcare_tags.json  netix_custom_tags.json  retail_mall_tags.json  smart_residential_tags.json  water_treatment_tags.json
scripts/: generate_vocabulary.py
tests/: test_brick.py  test_filter.py  test_parsers.py  test_refs.py  test_renderers.py  test_round_trip.py  test_vocabulary.py
tests/fixtures/golden_grids/: numbers_and_strings.zinc  site_floor_equip.trio  site_floor_equip.zinc
