[project]
name = "haystack-sdk"
version = "1.0.2"
description = "Project Haystack 4 parser, renderer, vocabulary, and Brick mapping SDK for NETIX services"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
authors = [{ name = "NETIX AI" }]
keywords = ["haystack", "brick", "iot", "semantic-tagging", "smart-buildings"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "black>=24.0",
]
brick-validation = ["brickschema>=0.7"]

[project.urls]
Homepage = "https://github.com/NETIX-AI-OSS/haystack-sdk"
Repository = "https://github.com/NETIX-AI-OSS/haystack-sdk"
Issues = "https://github.com/NETIX-AI-OSS/haystack-sdk/issues"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "haystack_sdk/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["haystack_sdk"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
